--- a/src/components/Footer/FooterStyle.css
+++ b/src/components/Footer/FooterStyle.css
@@ -1,14 +1,14 @@
 .footer{
   margin-top: 1rem;
   padding: 1rem;
-  background-color: #1F2937;
-  
-  position: fixed;
-  bottom: 0;
+  margin-top: 50vh;
   left: 0;
+  background-color: #1F2937;
   width: 100%;
-  
+  position: absolute;
+ 
 }
+
 
 .footer-title{
 color:#6B91A4;
