--- a/src/components/Footer/FooterStyle.css
+++ b/src/components/Footer/FooterStyle.css
@@ -1,12 +1,12 @@
 .footer{
-  margin-top: 1rem;
+  
   padding: 1rem;
   margin-top: 50vh;
   left: 0;
   background-color: #1F2937;
   width: 100%;
   position: absolute;
- 
+  height: 25rem;
 }
 
 
