--- a/src/components/Compressor/CompressorStyle.css
+++ b/src/components/Compressor/CompressorStyle.css
@@ -103,4 +103,18 @@ circle{
     background: var(--main-color);
   }
   
+  .customSlider-thumb {
+    cursor: pointer;
+    /*color for the thumb */
+    background: var(--main-color);
+    /* shape of the thumb: circle */
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+    /* remove default outline when selected */
+    outline: none;
+  }
   
+  .customSlider-thumb:hover {
+    box-shadow: 0 0 0 8px var(--main-color-hover);
+  }
