--- a/src/components/Compressor/CompressorStyle.css
+++ b/src/components/Compressor/CompressorStyle.css
@@ -79,12 +79,12 @@ circle{
   :root {
     --main-color: rgb(104, 117, 217);
     --main-color-hover: rgb(104, 117, 217, 0.2);
-    --track-color: #ddd;
+    --track-color: rgb(221, 221, 221);
   }
   
   .customSlider {
     /* max width of your slider */
-    max-width: 300px;
+    max-width: 35rem;
     /* Optional: Only If you want to center your slider in the page */
     margin: auto;
   }
@@ -108,8 +108,8 @@ circle{
     /*color for the thumb */
     background: var(--main-color);
     /* shape of the thumb: circle */
-    width: 20px;
-    height: 20px;
+    width: 2rem;
+    height: 2rem;
     border-radius: 100%;
     /* remove default outline when selected */
     outline: none;
